--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "@ttskch/select2-bootstrap4-theme": "^1.5.2",
     "bootstrap": "^5.2.0",
     "datatables": "^1.10.18",
+    "datatables.net-buttons": "^2.2.3",
     "datatables.net-buttons-bs4": "^2.2.3",
+    "datatables.net-buttons-se": "^2.2.3",
     "jquery": "^3.6.0",
+    "jszip": "^3.10.1",
+    "pdfmake": "^0.2.5",
     "startbootstrap-sb-admin-2": "^4.1.4",
     "turbolinks": "^5.2.0"
   },
