Se instalaron por medio de yarn add select2 y sweetalert2

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "jquery": "^3.6.0",
     "jszip": "^3.10.1",
     "pdfmake": "^0.2.5",
+    "select2": "^4.1.0-rc.0",
     "startbootstrap-sb-admin-2": "^4.1.4",
+    "sweetalert2": "^11.4.28",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
