Se creo scaffold de menu roles

--- a/test/fixtures/menu_roles.yml
+++ b/test/fixtures/menu_roles.yml
@@ -1,4 +1,17 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: menu_roles
+#
+#  id              :bigint           not null, primary key
+#  menu_padre      :integer
+#  user_created_id :integer
+#  user_updated_id :integer
+#  estado          :string(10)
+#  rol_id          :bigint           not null
+#  opcion_id       :bigint           not null
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
 
 one:
   menu_padre: 1
