--- a/test/fixtures/persona_empresa_formularios.yml
+++ b/test/fixtures/persona_empresa_formularios.yml
@@ -1,4 +1,17 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: persona_empresa_formularios
+#
+#  id               :bigint           not null, primary key
+#  descripcion      :text
+#  user_created_id  :integer
+#  user_updated_id  :integer
+#  estado           :string(10)
+#  opcion_ca_id     :bigint           not null
+#  personas_area_id :bigint           not null
+#  created_at       :datetime         not null
+#  updated_at       :datetime         not null
+#
 
 one:
   descripcion: MyText
