--- a/test/fixtures/personas_areas.yml
+++ b/test/fixtures/personas_areas.yml
@@ -1,4 +1,16 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: personas_areas
+#
+#  id              :bigint           not null, primary key
+#  user_created_id :integer
+#  user_updated_id :integer
+#  estado          :string(10)
+#  area_id         :bigint           not null
+#  persona_id      :bigint           not null
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
 
 one:
   user_created_id: 1
