Se creo scaffold de Roles

--- a/test/fixtures/roles.yml
+++ b/test/fixtures/roles.yml
@@ -1,4 +1,16 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: roles
+#
+#  id              :bigint           not null, primary key
+#  nombre          :string(200)
+#  descripcion     :text
+#  user_created_id :integer
+#  user_updated_id :integer
+#  estado          :string(10)
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
 
 one:
   nombre: MyString
